fix styles, add z-index

--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,25 @@
 body {
+  margin: 0;
+  padding: 0;
   background-color: rgb(248, 248, 248);
   background-image: url(/style/simple-christmas-background.jpg);
   background-size: 100% 100%;
+  position: relative;
 }
 
 .header {
-  background-color: rgb(252, 254, 255, 0.4);
+  padding: 20px;
+  background-color: rgb(252, 254, 255, 0.6);
+}
+
+main {
+  padding: 20px 30px;
+}
+
+h1,
+h2,
+p {
+  margin: 1rem;
 }
 
 h1 {
@@ -35,6 +49,8 @@ img {
 .container {
   display: grid;
   grid-template-columns: repeat(5, minmax(50px, 1fr));
+  gap: 20px;
+  align-items: center;
 }
 
 /* Стили для попапа */
@@ -73,6 +89,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
 }
 
 /* Стили для карточек, чтобы срабатывал клик */
